Please see NEWS for a summary of changes since the last release suitable
for announcements.

* Tue Oct 16 2012 Thunor <thunorsif@hotmail.com>
- Added an example application Pfeme.

* Fri Oct 12 2012 Thunor <thunorsif@hotmail.com>
- Added an example application Pfontview.

* Fri Sep 21 2012 Thunor <thunorsif@hotmail.com>
- Version 0.8.2 released (r455)

* Fri Sep 21 2012 Thunor <thunorsif@hotmail.com>
- Added an inotify alternative to the GIO file monitor which is very
  fast but unfortunately there's a 128 file descriptor limit so I've
  disabled it in configure.in.
- Fixed examples/miscellaneous/stock_icon_test: newlines in item.
- Updated the documentation.

* Thu Sep 20 2012 Thunor <thunorsif@hotmail.com>
- Removed rate-limit from docs as it means "the rate limit to which the
  monitor will report consecutive change events to the same file" and
  not the initial response time as I mistakenly thought. The initial
  response time doesn't appear to be configurable.
- Tweaked configure.in.
- Added examples/pixmap/pixmap_auto_refresh.
- Added examples/pixmap/pixmap_file_monitor.
- Updated the README.

* Wed Sep 19 2012 Thunor <thunorsif@hotmail.com>
- Added BUILD_DETAILS to the help string.
- Updated the copyright notices.
- Added support for the auto-refresh tag attribute to all widgets that
  currently support file monitors. Auto refreshing can be faster for
  applications that contain 100s of pixmaps or buttons (games) as it
  connects directly to the widget's refresh function and doesn't fire a
  signal through gtkdialog's signal handling system.

* Tue Sep 18 2012 Thunor <thunorsif@hotmail.com>
- Added file-monitor functionality to the notebook widget.
- Refactored the progressbar widget.
- Fixed the progressbar signal handling: it now has a default signal
  "time-out" and it now supports <action signal="type">...</action>.
- Added file-monitor functionality to the radiobutton widget.
- Added file-monitor functionality to the spinbutton widget.